Added missing project and fix for ogre22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 
 cmake_minimum_required(VERSION 3.3)
+  
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUG=1 -D_DEBUG=1")
+project(kosound)
 
 # Define project and its current version
 set(PACKAGE kosound)
